--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     </head>
     <body>
         <h1>Chat App</h1>
+        <button id="increment">Increment</button>
         <script src="/socket.io/socket.io.js"></script>
         <script src="/js/chat.js"></script>
     </body>
