--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,10 @@
     </head>
     <body>
         <h1>Chat App</h1>
-        <button id="increment">Increment</button>
+        <form id="message-form">
+            <input id="message" placeholder="message">
+            <button>Send</button>
+        </form>
         <script src="/socket.io/socket.io.js"></script>
         <script src="/js/chat.js"></script>
     </body>
