template rendering dynamic content using mustache library

--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,20 @@
     </head>
     <body>
         <h1>Chat App</h1>
+        <div id="messages"></div>
         <form id="message-form">
             <input id="message" placeholder="message">
             <button>Send</button>
         </form>
         <button id="send-location">Send Location</button>
+        <script id="message-template" type="text/html">
+            <div>
+                <p>{{msgDynamic}}</p>
+            </div>
+        </script>
+        <script src="/js/mustache.min.js"></script>
+        <script src="/js/moment.min.js"></script>
+        <script src="/js/qs.min.js"></script>
         <script src="/socket.io/socket.io.js"></script>
         <script src="/js/chat.js"></script>
     </body>
