render the location link in chatbox with dynamic link

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,11 @@
                 <p>{{msgDynamic}}</p>
             </div>
         </script>
+        <script id="location-message-template" type="text/html">
+            <div>
+                <p><a href="{{url}}" target="_blank">My current location:</a></p>
+            </div>
+        </script>
         <script src="/js/mustache.min.js"></script>
         <script src="/js/moment.min.js"></script>
         <script src="/js/qs.min.js"></script>
