time format moment library used. message with timestamp

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
         <button id="send-location">Send Location</button>
         <script id="message-template" type="text/html">
             <div>
-                <p>{{msgDynamic}}</p>
+                <p>{{createdAt}} - {{msgDynamic}}</p>
             </div>
         </script>
         <script id="location-message-template" type="text/html">
