--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
         </script>
         <script id="location-message-template" type="text/html">
             <div>
-                <p><a href="{{url}}" target="_blank">My current location:</a></p>
+                <p>{{createdAt}} - <a href="{{url}}" target="_blank">My current location:</a></p>
             </div>
         </script>
         <script src="/js/mustache.min.js"></script>
