--- a/public/index.html
+++ b/public/index.html
@@ -1,30 +1,51 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Chat App</title>
-    </head>
-    <body>
-        <h1>Chat App</h1>
-        <div id="messages"></div>
-        <form id="message-form">
-            <input id="message" placeholder="message">
-            <button>Send</button>
-        </form>
-        <button id="send-location">Send Location</button>
-        <script id="message-template" type="text/html">
-            <div>
-                <p>{{createdAt}} - {{msgDynamic}}</p>
+
+<head>
+    <title>Chat App</title>
+    <link rel="icon" href="/img/favicon.png">
+    <link rel="stylesheet" href="/css/styles.min.css">
+</head>
+
+<body>
+    <div class="chat">
+        <div class="chat__sidebar">
+
+        </div>
+        <div class="chat__main">
+            <div id="messages" class="chat__messages"></div>
+            <div class="compose">
+                <form id="message-form">
+                    <input id="message" placeholder="message">
+                    <button>Send</button>
+                </form>
+                <button id="send-location">Send Location</button>
+            </div>
+        </div>
+    </div>
+    <script id="message-template" type="text/html">
+            <div class="message">
+                    <p>
+                        <span class="message__name">User Name</span>
+                        <span class="message__meta">{{createdAt}}</span>
+                    </p>
+                <p>{{msgDynamic}}</p>
             </div>
         </script>
-        <script id="location-message-template" type="text/html">
-            <div>
-                <p>{{createdAt}} - <a href="{{url}}" target="_blank">My current location:</a></p>
+    <script id="location-message-template" type="text/html">
+            <div class="message">
+                    <p>
+                            <span class="message__name">User Name</span>
+                            <span class="message__meta">{{createdAt}}</span>
+                        </p>
+                <p><a href="{{url}}" target="_blank">My current location:</a></p>
             </div>
         </script>
-        <script src="/js/mustache.min.js"></script>
-        <script src="/js/moment.min.js"></script>
-        <script src="/js/qs.min.js"></script>
-        <script src="/socket.io/socket.io.js"></script>
-        <script src="/js/chat.js"></script>
-    </body>
+    <script src="/js/mustache.min.js"></script>
+    <script src="/js/moment.min.js"></script>
+    <script src="/js/qs.min.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="/js/chat.js"></script>
+</body>
+
 </html>
