--- a/public/chat.html
+++ b/public/chat.html
@@ -9,7 +9,7 @@
 
 <body>
     <div class="chat">
-        <div class="chat__sidebar">
+        <div id="sidebar" class="chat__sidebar">
 
         </div>
         <div class="chat__main">
@@ -40,7 +40,18 @@
                         </p>
                 <p><a href="{{url}}" target="_blank">My current location:</a></p>
             </div>
-        </script>
+    </script>
+    <script id="sidebar-template" type="text/html">
+        <h2 class="room-title">{{room}}</h2>
+        <h3 class="list-title">Users</h3>
+        <ul class="users">
+            {{#users}}
+            <li>
+                {{username}}
+            </li>
+            {{/users}}
+        </ul>
+    </script>
     <script src="/js/mustache.min.js"></script>
     <script src="/js/moment.min.js"></script>
     <script src="/js/qs.min.js"></script>
